pom.xml fixes
Signed-off-by: Bruno Carbone <brunocr1050@gmail.com>